2004-05-04  Alan Shutko  <ats@acm.org>

	* slime.el (slime-compiler-notes-show-details/mouse): New command.
	(slime-compiler-notes-mode-map): Use it.

2004-05-04   Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* swank-cmucl.lisp (arglist): Handle byte-code functions better.
	We don't know much about the actual argument list, only the number
	of arguments.  Return at lest something mildly interesting like
	 (arg0 arg1 &optional arg2 ...)
	(function-location): Special-case byte-code functions.

	* swank-backend.lisp (with-struct): New macro.

2004-05-04 Thomas F. Burdick  <tfb@OCF.Berkeley.EDU>

	* slime.el (slime-reindent-defun): New command on C-M-q. Reindent
	the current Lisp defun after trying to close any unmatched
	parenthesis. If used within a comment it just calls fill-paragraph.

2004-05-04  Luke Gorrie  <luke@bluetail.com>

	* slime.el (slime-goto-location-position): Regexp fix.
	(slime-reindent-defun): New command on M-q. Reindent the current
	Lisp defun after trying to close any unmatched parenthesis.

	* swank.lisp: Remove (declaim (optimize ...)). The side-effect
	this has on people's environment seems harmful (I saw someone
	having trouble on the OpenMCL list).

	* swank-cmucl.lisp (source-location-from-code-location): Fixed a
	bug where the source-file-cache was not really used.
	Now always report the location based on source file (cached or
	not) even if modified -- not falling back on regexps, which was
	probably a misfeature.

	* slime.el: Remove `slime-cleanup-definition-refs'.

2004-05-02   Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* slime.el (slime-start-and-load): New command.  Suggested by
	Lars Magne Ingebrigtsen.

2004-05-02  Lars Magne Ingebrigtsen  <larsi@netfonds.no>

	* slime.el (slime-kill-without-query-p): New variable.
	(slime-net-connect): Use it.
	(slime-open-stream-to-lisp): Ditto.
	(slime-maybe-start-lisp): Ditto.

2004-05-02  Luke Gorrie  <luke@bluetail.com>

	* slime.el (slime-goto-source-location): Added support for the